--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -6,11 +6,13 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<ul th:each="menu : ${menus}">
-    <li th:text="${menu.cheeses}"></li>
+<ul>
+    <li th:each="cheese : ${cheeses}" th:text="${cheese.name}"></li>
 </ul>
 
-<p><a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a></p>
+<p th:unless="${cheeses.size()}"><i>No cheeses yet</i></p>
+
+<p><a th:href="'/menu/add-item/' + ${menuId}">Add Cheese</a></p>
 
 </body>
 </html>
